--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,51 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+body {
+    font-family: 'Open Sans', sans-serif;
+}
 
-// Variables
-@import 'variables';
+a {
+    text-decoration: none;
+    color: black;
+}
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+a:hover {
+    text-decoration: underline;
+}
+
+header {
+    padding: 1.5em 2em;
+    background-image: linear-gradient(to right, #a25b5b, #692e4c);
+}
+
+.container {
+    max-width: 1120px;
+    margin: 0 auto;
+}
+
+header h1 {
+    margin-top: 0;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.header-top > a {
+    color: inherit;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+}
+
+nav > a {
+    padding-right: 20px;
+    padding-left: 20px;
+    text-transform: uppercase;
+    color: rgba($color: white, $alpha: .5);
+
+}
